--- a/index.html
+++ b/index.html
@@ -128,26 +128,27 @@
             <div class="col-md-4">
                 <h4>Potrzebujesz informacji, napisz do nas: </h4>
                 <hr>
-                <form>
+                
+                <form id="sendMessageForm">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" required="required" placeholder="Imię Nazwisko">
+                                <input type="text" class="form-control" id="messageSender" required="required" placeholder="Imię Nazwisko">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" required="required" placeholder="adres mailowy">
+                                <input type="text" class="form-control" id="messageReplyTo" required="required" placeholder="adres mailowy">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-sm-12">
                             <div class="form-group">
-                                <textarea name="message" id="message" required class="form-control" rows="3" placeholder="Wiadomość"></textarea>
+                                <textarea name="message" id="message" required class="form-control"  rows="3" placeholder="Wiadomość"></textarea>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Wyślij</button>
+                                <button type="submit" class="btn btn-primary" id="sendmessage">Wyślij</button>
                             </div>
                         </div>
                     </div>
@@ -199,5 +200,7 @@
 
     </script>
 
+    <script src="assets/js/send.message.js" type="text/javascript"></script>
+    
 </body>
 </html>
